# ML_SD_Traffic

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yaml  compose_deploy.yaml  compose_train.yaml  docker-compose.yaml  dvc.yaml  ml_system_design_document.md  pyproject.toml  train.py
.dvc/: config
.github/workflows/: actions-precommit.yaml  github-actions-test.yaml  review.yaml
airflow/: compose_airflow.yaml  export_ENV.bash
airflow/configs/: .env
airflow/docker/: Airflow
airflow/entrypoint/: entry_alt.sh  entrypoint.sh
config/: config.yaml
data/: clean_data.py  download_instructions.bash  download_scenarios.bash  utils.py
docker/: Dockerfile  Dockerfile_airflow  Dockerfile_review  Dockerfile_train
review/: entrypoint.py  requirements.txt  run_server.bash
src/core/core/: settings.py  urls.py
src/core/data/: .gitignore  single-intersection-vhvh.rou.xml.dvc  single-intersection.net.xml.dvc
src/core/saved_models/: .gitignore  DQN_model.zip.dvc
src/core/tlo/: inference.py  train.py
src/core/training/: settings.py  tasks.py  urls.py  views.py
src/core/training/templates/: home.html
src/tlo/: train.py
src/training/: inference.py  learner.py  model.py  replay.py  train.py
tests/: poetry_test.py
